# mcp_test

./: .gitignore  README.md  client.py  main.py  pyproject.toml
scripts/: mcp_client.py  simple_server.py
src/: mcp_server.py  news.py  server.py
src/core/: config.py
src/index_pipeline/: embedding.py  indexer.py  parser.py  text_splitter.py
src/tools/: news.py  rag.py
