[project]
name = "modelcontextprotocol"
version = "0.1.0"
description = "Project to learn build MCP(Model Context Protocol) server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.34.0",
    "fastapi>=0.115.12",
    "fastmcp>=2.2.6",
    "langchain>=0.3.25",
    "qdrant-client>=1.12.1",
]
